# poetry-slow-resolve-repro

./: .gitignore  Makefile  build-wheels  pyproject.toml  requirements.txt
pypi/: index.html
pypi/changelog/: page1.html
pypi/pypi/a/1.0.0/: json
pypi/pypi/b/: json
pypi/pypi/b/1.0.0/: json
pypi/pypi/b/2.0.0/: json
pypi/pypi/c/: json
pypi/simple/: index.html
pypi/simple/a/: index.html
pypi/simple/b/: index.html
pypi/simple/c/: index.html
pypi/wheels/: a-1.0.0-py3-none-any.whl  b-1.0.0-py3-none-any.whl  b-2.0.0-py3-none-any.whl  c-1.0.0-py3-none-any.whl  c-1.0.1-py3-none-any.whl  c-1.0.10-py3-none-any.whl  c-1.0.100-py3-none-any.whl  c-1.0.101-py3-none-any.whl  c-1.0.102-py3-none-any.whl  c-1.0.103-py3-none-any.whl  c-1.0.104-py3-none-any.whl  c-1.0.105-py3-none-any.whl  c-1.0.106-py3-none-any.whl  c-1.0.107-py3-none-any.whl  c-1.0.108-py3-none-any.whl  c-1.0.109-py3-none-any.whl  c-1.0.11-py3-none-any.whl  c-1.0.110-py3-none-any.whl  c-1.0.111-py3-none-any.whl  c-1.0.112-py3-none-any.whl  c-1.0.113-py3-none-any.whl  c-1.0.114-py3-none-any.whl  c-1.0.115-py3-none-any.whl  c-1.0.116-py3-none-any.whl  c-1.0.117-py3-none-any.whl  c-1.0.118-py3-none-any.whl  c-1.0.119-py3-none-any.whl  c-1.0.12-py3-none-any.whl  c-1.0.120-py3-none-any.whl  c-1.0.121-py3-none-any.whl  c-1.0.122-py3-none-any.whl  c-1.0.123-py3-none-any.whl  c-1.0.124-py3-none-any.whl  c-1.0.125-py3-none-any.whl  c-1.0.126-py3-none-any.whl  c-1.0.127-py3-none-any.whl  c-1.0.128-py3-none-any.whl  c-1.0.129-py3-none-any.whl  c-1.0.13-py3-none-any.whl  c-1.0.130-py3-none-any.whl  (+163 more)
(+200 files in other folders)
