[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Chris Kuehl <ckuehl@ckuehl.me>"]

[tool.poetry.dependencies]
a = "1.0.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "Test PyPI"
url = "http://localhost:9997/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
